[package]
name = "lsotp"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
atty = "0.2.14"
clap = { version = "4.5.40", features = ["derive"] }
image = "0.25.10"
koibumi-base32 = "0.0.3"
qrism = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
sha1 = "0.10.6"
